--- a/src/App.css
+++ b/src/App.css
@@ -51,3 +51,11 @@ body {
   padding: 15px;
   gap: 15px;
 }
+
+button {
+  padding: 10px;
+  border-radius: 10px;
+  margin: 5px;
+  cursor: pointer;
+  background-color: aqua;
+}
