--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: rgba(25, 26, 21, 0.1);
+  background: rgba(25, 26, 21, 0.2);
   z-index: 1200;
   overflow: auto;
 }
@@ -16,7 +16,7 @@
   border: 2px solid green;
   padding: 20px;
   /* color: red; */
-  background-color: rgba(209, 240, 212, 0.808);
+  background-color: rgb(198, 224, 201);
   border-radius: 14px;
   /* max-width: 273px; */
 }
