--- a/src/App.css
+++ b/src/App.css
@@ -59,3 +59,10 @@ button {
   cursor: pointer;
   background-color: aqua;
 }
+
+.search {
+  padding: 10px;
+  border-radius: 10px;
+  min-width: 300px;
+  margin: 5px;
+}
